--- a/PipeLightsOrderManagementApp/Views/Home/NewOrder.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Home/NewOrder.cshtml
@@ -61,8 +61,11 @@
                   </div>
 
                   <div class="mb-1">
-                    <label  class="form-label">Prenume</label>
-                    <input name="LastName" type="text" class="form-control" placeholder="*">
+                    <label  class="form-label">Sex</label>
+                     <select name="LastName" class="form-select">
+                      <option value="M">M</option>
+                      <option value="F">F</option>
+                    </select>
                   </div>
 
                   <div class="mb-1">
@@ -86,29 +89,80 @@
                   </div>
 
                   <div class="mb-1">
-                    <label class="form-label">Culoare</label>
+                    <label class="form-label">Culoare si caracteristici</label>
                     <input name="Color" type="text" class="form-control" placeholder="*">
                   </div>
 
                   <div class="mb-1">
                     <label class="form-label">Data Comanda</label>
-                    <input name="OrderDate" type="datetime-local" class="form-control" placeholder="*">
+                    <input name="OrderDate" type="date" class="form-control" placeholder="*">
                   </div>
 
                   <div class="mb-1">
                     <label class="form-label">Data Livrare</label>
-                    <input name="DeliveryDate" type="datetime-local" class="form-control" placeholder="*">
+                    <input name="DeliveryDate" type="date" class="form-control" placeholder="*">
                   </div>
 
                   <div class="mb-1">
                     <label class="form-label">Canal</label>
-                    <input name="Channel" type="text" class="form-control" placeholder="*">
+                     <select name="Channel" class="form-select">
+                      <option value="Website">Website</option>
+                      <option value="Instagram">Instagram</option>
+                      <option value="Facebook">Facebook</option>
+                      <option value="Telefon">Telefon</option>
+                      <option value="Targ">Targ</option>
+                    </select>
                   </div>
 
-                  <div class="mb-1">
-                    <label class="form-label">Caracteristici</label>
-                    <input name="Characteristics" type="text" class="form-control" placeholder="*">
+                   <div class="mb-1">
+                        <label class="form-label">Judet</label>
+                        <select name="Characteristics" class="form-select">
+                            <option value="0">Alege Judet</option>
+                            <option value="Alba">Alba</option>
+                            <option value="Arad">Arad</option>
+                            <option value="Arges">Arges</option>
+                            <option value="Bacau">Bacau</option>
+                            <option value="Bihor">Bihor</option>
+                            <option value="Bistrita Nasaud">Bistrita Nasaud</option>
+                            <option value="Botosani">Botosani</option>
+                            <option value="Brasov">Brasov</option>
+                            <option value="Braila">Braila</option>
+                            <option value="Bucuresti">Bucuresti</option>
+                            <option value="Buzau">Buzau</option>
+                            <option value="Caras Severin">Caras Severin</option>
+                            <option value="Calarasi">Calarasi</option>
+                            <option value="Cluj">Cluj</option>
+                            <option value="Constanta">Constanta</option>
+                            <option value="Covasna">Covasna</option>
+                            <option value="Dambovita">Dambovita</option>
+                            <option value="Dolj">Dolj</option>
+                            <option value="Galati">Galati</option>
+                            <option value="Giurgiu">Giurgiu</option>
+                            <option value="Gorj">Gorj</option>
+                            <option value="Harghita">Harghita</option>
+                            <option value="Hunedoara">Hunedoara</option>
+                            <option value="Ialomita">Ialomita</option>
+                            <option value="Iasi">Iasi</option>
+                            <option value="Ilfov">Ilfov</option>
+                            <option value="Maramures">Maramures</option>
+                            <option value="Mehedinti">Mehedinti</option>
+                            <option value="Mures">Mures</option>
+                            <option value="Neamt">Neamt</option>
+                            <option value="Olt">Olt</option>
+                            <option value="Prahova">Prahova</option>
+                            <option value="Satu Mare">Satu Mare</option>
+                            <option value="Salaj">Salaj</option>
+                            <option value="Sibiu">Sibiu</option>
+                            <option value="Suceava">Suceava</option>
+                            <option value="Teleorman">Teleorman</option>
+                            <option value="Timis">Timis</option>
+                            <option value="Tulcea">Tulcea</option>
+                            <option value="Vaslui">Vaslui</option>
+                            <option value="Valcea">Valcea</option>
+                            <option value="Vrancea">Vrancea</option>
+                        </select>
                   </div>
+                  
      
                   <h6 style="color:red; visibility:hidden" class="form-label label my-3">Toate campurile sunt obligatorii</h6>
 
