--- a/PipeLightsOrderManagementApp/Views/Order/DeleteOrder.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Order/DeleteOrder.cshtml
@@ -36,49 +36,49 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderNumber)
+            Comanda
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.OrderNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            Nume
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Sex
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
+            Email
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Adress)
+            Adresa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Adress)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lamp)
+            Model
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Lamp)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Pret
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Price) RON
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Color)
+            Culoare si caracteristici
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Color)
@@ -87,22 +87,22 @@
             @Html.DisplayNameFor(model => model.OrderDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
+            <time> @Model.OrderDate.ToString("dd-MM-yyyy")</time>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DeliveryDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeliveryDate)
+            <time> @Model.OrderDate.ToString("dd-MM-yyyy")</time>
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Channel)
+            Canal
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Channel)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Characteristics)
+            Judet
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Characteristics)
