--- a/PipeLightsOrderManagementApp/Views/Shared/_Layout.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PipeLightsOrderManagementApp.styles.css" asp-append-version="true" />
+
+    <style>
+        body{
+            padding:20px;
+        }
+    </style>
 </head>
 <body>
     <header>
