--- a/PipeLightsOrderManagementApp/Views/Order/ShowOrderDetails.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Order/ShowOrderDetails.cshtml
@@ -27,26 +27,25 @@
     <h4>Comanda @Model.OrderNumber</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
+        
+        
+        <dd style="display:none" class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderNumber)
+            Cmanda
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.OrderNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            Nume
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Sex
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
@@ -58,49 +57,49 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Adress)
+            Adresa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Adress)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lamp)
+            Model
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Lamp)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            Pret
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Color)
+            Culoare si caracteristici
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Color)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderDate)
+            Data Comanda
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrderDate)
+             <time> @Model.OrderDate.ToString("dd-MM-yyyy")</time>
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeliveryDate)
+            Data Livrare
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeliveryDate)
+            <time> @Model.DeliveryDate.ToString("dd-MM-yyyy")</time>
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Channel)
+            Canal
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Channel)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Characteristics)
+            Judet
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Characteristics)
@@ -108,7 +107,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a href="~/Order/Edit?id=@Model.Id">Editeaza</a> |
     <a asp-action="ShowAllOrders">Inapoi</a>
 </div>
 </body>
