--- a/PipeLightsOrderManagementApp/Views/Order/ShowAllOrders.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Order/ShowAllOrders.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
 <p>
-    <a class="btn btn-warning" href="~/Home/NewOrder">Introdu o noua comanda</a>
+    <a class="btn btn-success" href="~/Home/NewOrder">Introdu o noua comanda</a>
 </p>
 
 <br />
