--- a/PipeLightsOrderManagementApp/Views/Operation/SortOrders.cshtml
+++ b/PipeLightsOrderManagementApp/Views/Operation/SortOrders.cshtml
@@ -22,8 +22,8 @@
 </head>
 <body>
 <p>
-    <a class="btn btn-warning" href="~/Home/NewOrder">Introdu o noua comanda</a>
-    <a class="btn btn-success" href="~/Order/ShowAllOrders">Introdu o noua comanda</a>
+    <a class="btn btn-success" href="~/Home/NewOrder">Introdu o noua comanda</a>
+    <a class="btn btn-warning" href="~/Order/ShowAllOrders">Vezi toate comenzile</a>
 </p>
 
 <br />
